--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -3,12 +3,6 @@
 #max.item.quantity=\uC218\uB7C9\uC740 \uCD5C\uB300 {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 #totalPriceMin=\uAC00\uACA9 * \uC218\uB7C9\uC758 \uD569\uC740 {0}\uC6D0 \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4. \uD604\uC7AC \uAC12 = {1}
 
-#==ObjectError==
-#Level1
-totalPriceMin.item=\uC0C1\uD488\uC758 \uAC00\uACA9 * \uC218\uB7C9\uC758 \uD569\uC740 {0}\uC6D0 \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4. \uD604\uC7AC \uAC12 = {1}
-#Level2 - \uC0DD\uB7B5
-totalPriceMin=\uC804\uCCB4 \uAC00\uACA9\uC740 {0}\uC6D0 \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4. \uD604\uC7AC \uAC12 = {1}
-
 #==FieldError==
 #Level1
 required.item.itemName=\uC0C1\uD488 \uC774\uB984\uC740 \uD544\uC218\uC785\uB2C8\uB2E4.
@@ -30,5 +24,17 @@ min= {0} \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4.
 range= {0} ~ {1} \uBC94\uC704\uB97C \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 max= {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 
-typeMismatch.java.lang.Integer=\uC22B\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+
+NotBlank={0}\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
+#NotNull=\uB110\uAC12\uC785\uB2C8\uB2E4.
+Range={0}\uC740 {2} ~ {1} \uD5C8\uC6A9
+Max={0}\uC740 \uCD5C\uB300 {1}
+
+#==ObjectError==
+#Level1
+totalPriceMin.item=\uC0C1\uD488\uC758 \uAC00\uACA9 * \uC218\uB7C9\uC758 \uD569\uC740 {0}\uC6D0 \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4. \uD604\uC7AC \uAC12 = {1}
+#Level2
+totalPriceMin=\uC804\uCCB4 \uAC00\uACA9\uC740 {0}\uC6D0 \uC774\uC0C1\uC774\uC5B4\uC57C \uD569\uB2C8\uB2E4. \uD604\uC7AC \uAC12 = {1}
+
+typeMismatch.java.lang.Integer=\uC22B\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694!
 typeMismatch=\uD0C0\uC785 \uC624\uB958\uC785\uB2C8\uB2E4.
